# maphrs

./: pyproject.toml
src/maphrs/: __init__.py  m_statistics.py
src/maphrs/stats/: descriptive.py  uncertainty.py
src/maphrs/visualization/: stats_plots.py
tests/: test.py
