[project]
name = "maphrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilhermwn", email = "limaoplaykglp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
]

[project.scripts]
maphrs = "maphrs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
